example scene and ignoring it for builds

--- a/build.settings
+++ b/build.settings
@@ -16,6 +16,7 @@ settings =
 	
 	excludeFiles =
 	{
+		all = { "example_scene.lua", }
 		-- Include only the necessary icon files on each platform
 		iphone = { "Icon-*dpi.png", },
 		android = { "Icon.png", "Icon-Small-*.png", "Icon*@2x.png", },
